--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,22 @@
 version: '3'
 services:
-   app:
-    container_name: node_app
+  app:
+    container_name: docker-node-mongo
+    restart: always
     build: .
     ports:
-      - 3000:3000
-    restart: always
+      - '8080:3000'
+    networks:
+      - test
     links:
       - mongo
+  mongo:
+    container_name: mongo
+    image: mongo
+    ports:
+      - '27017:27017'
     networks:
-      - nodenw  
-   mongo:
-      image: mango:latest
-      container_name: mongo_db
-      restart: always
-      environment:
-          MONGO_INITDB_ROOT_USERNAME: root
-          MANGO_INTIDB_ROOT_PASSWORD: root
-          MANGO_INITDB_DATABASE: node_db
-      ports:
-        - 27017:27017
-      networks:
-        - nodenw  
-volumes:
-  nodevolume:
+      - test
 networks:
-  nodenw:
+   test:
+     driver: 'bridge'
